# pyspark-craftsmanship

./: .gitignore  Covid_ETL_Notebook.py  README.md  pyproject.toml
.github/workflows/: cicd.yml  pyspark-app.yml
config/: __init__.py  config.py  settings.toml
dependencies/: spark.py
jobs/: bronze.py  gold.py  silver.py
tests/: __init__.py  conftest.py  test_gold.py  test_jobs.py  test_silver.py
tests/test_data/: covid_gold_test.csv  covid_silver_test.csv
tests/test_data/expected/covid_gold/: .part-00000-71e123b2-bbbe-49ae-a894-72130291f157-c000.snappy.parquet.crc  .part-00001-71e123b2-bbbe-49ae-a894-72130291f157-c000.snappy.parquet.crc  .part-00002-71e123b2-bbbe-49ae-a894-72130291f157-c000.snappy.parquet.crc  part-00000-71e123b2-bbbe-49ae-a894-72130291f157-c000.snappy.parquet  part-00001-71e123b2-bbbe-49ae-a894-72130291f157-c000.snappy.parquet  part-00002-71e123b2-bbbe-49ae-a894-72130291f157-c000.snappy.parquet
